enable intel-gpu-plugin chart

--- a/clusters/main/clusterenv.yaml
+++ b/clusters/main/clusterenv.yaml
@@ -1,45 +1,45 @@
-#ENC[AES256_GCM,data:L+46B+sa/7EHWzDFbO7i10FHpXo/MH4yJmCZn7P0QuHqxYG6EmzS1xGMdww12hXUmGipSJdA1SFW4Lrm6cPFRH8=,iv:Ior8i9GAlb69OxUuAS8hnE44XBXMInGG+wflgB6zFQk=,tag:NORu0+NBHMu/LKN0EdGsiQ==,type:comment]
-#ENC[AES256_GCM,data:llVfnb8EbYP7qviGqlUh0cmxh459RhfEWTEqtUhrtWdOJo8kO2agHMZYNzY=,iv:GN/JisNLjW4hPXIeGzHjyKGJjaQMIoNVzsO6By0v9BU=,tag:PNemzWWgrjM4cS2oboLxXw==,type:comment]
-VIP: ENC[AES256_GCM,data:XCqTNP5Tqw64cKxZtg==,iv:6xhtdxltTKtKNMefbHiDzP0HVHMAnA0F51YKLupVxvg=,tag:OGdpNd81W4z35n+Q7M6Ahw==,type:str]
-#ENC[AES256_GCM,data:aJMJh5u48GuZ15gqU5rgGjiMcCVMZH4YOaHR,iv:diqTIbiwBRqQjxAFx3tUj+hzXGaLCjt5dL3yw/uB9EQ=,tag:S7VVe5YP7TyA2P0TGMMUJw==,type:comment]
-#ENC[AES256_GCM,data:RQ5EfpwWRZr9/yCIkfUL+gkf/qTYko5jUmIGEkIK6FLOwwL5tjBLKAm88DHqqzhTCDvxvj4xXERhh85m7Mood30uAk0GGOUkBYPGFn3CuwX308y1sdzdm3c=,iv:vc1OfloIojhQWU/NyYMgCcVrZdZ0a2JbR7Mo7sT79XA=,tag:tnBf8fE7lVM7hx6SMKL6dw==,type:comment]
-MASTER1IP: ENC[AES256_GCM,data:mu+tiSBWOlh8Fyuzxic=,iv:gpoMJNo/F5hIJuQLJaOFB/8wjqWJumOAAy0cFJMfk4s=,tag:nxL85oxwFrMKCoJrnTN60w==,type:str]
-#ENC[AES256_GCM,data:tkwyCIUzhegaxFjuFKDIUQ5mOU8qrIQ5iuvmZNaXUkEHJQ==,iv:WDLILS0VFdEepwK5DmGleZ3tSD0wbule+uf+Mx1dh10=,tag:/ztvlMqSJJbij0U1gY6joA==,type:comment]
-GATEWAY: ENC[AES256_GCM,data:VPmlUogSlOaip37lUg==,iv:jUpoXcqEqC2LnCWc2wx8PAtDOt0okOAHG+wgzTFZ1j8=,tag:ZSWMp/yGMnRhd+9Se9VOYA==,type:str]
-#ENC[AES256_GCM,data:k7WlXEuzI7cmKnpwJlfnWPW8eyw6YxlARjhTeBMZrnv6wfVq4acBr7sQcaSteRw=,iv:RIZshO5x0ckxH5n+gGEu9MykzOEpgkuD9ttxOBOxA6s=,tag:4OTrwm4HYlh5zbFg6CyOdQ==,type:comment]
-METALLB_RANGE: ENC[AES256_GCM,data:nvqmOVCmG9/59/2ZmYOvpWWew4iTmL4lpbnjhV1nuA==,iv:d4ccco+ixN1JonfJf7siDfFXBqQYsP1myG1z57ecK0Q=,tag:Q0gf6OYbJwDVuUmWRA+n8g==,type:str]
-#ENC[AES256_GCM,data:TjYC2TYa7RPEns1O6yGI3ynvlLk7ucIonm3rX/5cK1YjefqzfWu5/8I+VfCvzhX67dXgvZum6Ry0A5XVGnVini4J0OMFs01SkPuiQdUA8RaIYg==,iv:oIIVlLGDLYG0WPqgO+lPsdhN3RAfcQELu/7OwQ0wwtE=,tag:bzJdcvpOw0fTVd1A1LRTWg==,type:comment]
-TRAEFIK_IP: ENC[AES256_GCM,data:+ESQx7Zgi2CPvmwgIH4U,iv:nYpd21iLnh/cjgqq2oLmS8fCiDlD1FAoNh5pTjvyfHs=,tag:m8xmvpVzn49a4xvswYXRKA==,type:str]
-#ENC[AES256_GCM,data:0RH+6KTmHEb8cugK5/yefw70DDzMVjRqflpXrDO7K4MH,iv:MrXU558pkvQ2xY9n7qxKCDzD79RZYGPIqNJRQTUQGtY=,tag:6kh5JUlCxHbfibWvH3LNkw==,type:comment]
-BLOCKY_IP: ENC[AES256_GCM,data:HuqCCRrHj4qsEppeVVyH,iv:gbe2FS6PuQ4uRTa5v6+P0q/cvfD0Oy5Q8FZ5AcWvrkw=,tag:tOcc1z4YPpWK1+PX29woYA==,type:str]
-#ENC[AES256_GCM,data:laNr1sviwj0MvFa+a0ACIea/tkP+X2qJp0OJ/7tWy/LwvfPmIJ3zgRdV7MqUr09So6cbp6wEnQSjVCImEx6YNJicU7uLRNyeQ2IEcslvdWQ=,iv:yvGf5zpbBXqcfKg78UP+E1yQpFBYC5tfbVbHAHo2dF8=,tag:j9V+3huYhjM5eLCwUvI7Cg==,type:comment]
-DASHBOARD_IP: ENC[AES256_GCM,data:gkcK4fGjHEfrXgcGsxk0,iv:/eYgOpvkBaH2o9LgQqwt8DdJ0F9IAtsvqEvYfik+PSk=,tag:l03T+KkH8FJHSlBVlrg/Jw==,type:str]
-#ENC[AES256_GCM,data:bf7NCAvbIuVZrGtJa3ovIBcNd/i3Z5Yf/XIT1jpNq4oWUKAwBb1y2TOvDbWFtt0X/QZavS5NkJW2QmkgS7lbVksrjIi4F1gPr6fDmTqghOD3+h44mpAV,iv:R0t9HgxlKhbFfabhSoM/zBWp1s+ubNfa2NZ7I+Bp4D8=,tag:CQ2KPVldpHQREQ3zyMRw4A==,type:comment]
-#ENC[AES256_GCM,data:CaBA0uIC7vxMfVcr336u1cAZSyxPI9tAZsu/Q3mdJee/jFkhk3I0iDQ/r7v6kO344E0jR79ccfsvoWoL8u1wjcvVkKbFnVYzmXHyfr5LO+pWuWfcFUzl3RlD2oewQJkvoGLr61+UEnsJk2qzPskaXy/NB7HZKhqwP5LmdA==,iv:qmtKLIKqKL5TLPLHBWoCnchm8igyfoa0lQrH660G0Ds=,tag:0pidMQVe7JXPPqAiMXlhmA==,type:comment]
-#ENC[AES256_GCM,data:dx0fhKt5o1UlueXbw3cDv2PAqoMoVZh7CRo7Yn3mCxJqkpXFDBEMu5s8bDBLqPPn91pjpt1Wyu1Hw5p3mU4RUcPPv8kXF9Ht0V3SQO5Lmsg=,iv:ic9p0COV2w8fN9szTHHmSq7zzTd0QvWtBvrxVY7yTp8=,tag:u1+E+yQKEssSELNWshZohA==,type:comment]
-#ENC[AES256_GCM,data:o/g+q7bnkeESR/gUHwhcaCGL18abpxnrC3aSuR4K0ahmQMnUNEN9JbN4Sd3XeUryMR6OaFLj,iv:ImyWbDOd4I1LYkNH9mHzNz7ejV++s16f4wdJ8vscW9E=,tag:VAQ6ZHkQacB2Mhpb2u5+Yw==,type:comment]
-DOMAIN_0: ENC[AES256_GCM,data:eiGg5s9ijOiy75Cd,iv:meXXl3jzuW54nRmKG0CeEGRQx4dVXZs+PHhbQ4W+0Fw=,tag:sOc15lo6gdcE1klqeiK/OA==,type:str]
-DOMAIN_0_EMAIL: ENC[AES256_GCM,data:XYlJvwCwvNl/J4vZUPa4pu8=,iv:lVb5a7mqBpDausGLfnLWc4W6ik+KuJj8aIwZDsKCgvM=,tag:tWFPXsuK2YeKFWriVIFYRg==,type:str]
-DOMAIN_0_ZONE: ENC[AES256_GCM,data:HXmR5L66KQiDl+LxR9q82uJ69Da9ZjukeFS0KITlNSs=,iv:WCWn+xuMDiAD50ITqWSzbxJataO4+ROoolqjb7Ielmk=,tag:F/EF/niFYWAAVBw21pvg/Q==,type:str]
-DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:CeTJ40ki6by0Hj5x8tf1ZPiwecuoOQlperjAab4CqjV/bGpV9yNx3g==,iv:oBHKQ2Dv7TQvDDJNsiWmGcDeT/pNK11WeEbVRf0W8dI=,tag:zlI34tJ5ArGToCxQGOAIiQ==,type:str]
-#ENC[AES256_GCM,data:LShaslOnMECxQAz3hnWGoKlEdS18vqbkK552UZtxVDGBhuvuq62RTise8P3k9wIWaLaVG7xxN1KxUuIsSBpd9Q==,iv:F9JBaaZbSUxtI3xi/Aj5w23BpGJ3EsFri7UrojuJ4Hs=,tag:pAhsD2IB5DPcTbLnp+rbxA==,type:comment]
-#ENC[AES256_GCM,data:9m0kchmB44pJ1F+ATktOjqfQRic00iTOPWp/gfyNGPVY7SWw34Pse5cnw0Mh+gxBLzVddpt+Ol8=,iv:uiXomEkksmSy9wUq7iUXjgxCY6DB2iAPS6cEJn/wIWQ=,tag:vD4PAt7EjdHg0oqwjd6E7w==,type:comment]
-#ENC[AES256_GCM,data:WWHlFy15Hlve7XBMDHHYMRMjNhg/cmoBzg==,iv:u0Nf9XHQjMzl2PYp4cpQrtSOAqNReemUb5/iXZz2a8M=,tag:t6+2kRHMFacnyCuxJMMbZA==,type:comment]
-#ENC[AES256_GCM,data:ICuDXOx4TSgoPhlox8/ZbKEZIg6gvRqWQegBQRZnhNrA3pVBpMunRIn6odkBXK/hRc802l7G529Ze4arbkg0AN65Ow83d5ppMpL/IAo=,iv:JAvBmlFH54eImO5imnHPWmtLrYjducT44bR1bQQNWdw=,tag:2mhBu8v5hyvIyLznATLGFg==,type:comment]
-GITHUB_REPOSITORY: ENC[AES256_GCM,data:DyNraQ1uxH7Dnx02pS9PNOLZ1ir0+V0nXi4uE5q/4dArEnrNYldVYaipJH9XmgsA,iv:yo0Wq+QSCxoC8Vhd45TtK9Xq+W+lyYAXacsVlsiumfc=,tag:BVuSY8AsOa06sjcDfU6wkQ==,type:str]
-#ENC[AES256_GCM,data:tF2RyocKgIyq+L2rxPMoNIWUtEhwVMTOMkBG8sa+8Vmr6z3Je9uq+VZJ1tLqSm4lFfOw5wT0kFUTLC+CxFckWiat6x5QFsw=,iv:TmBiCYR5Egm5DvseAyQMPTb8afqiK2MQCvkV5Hsdnys=,tag:vSUbOWqPYS/QXBe6o5FETg==,type:comment]
-#ENC[AES256_GCM,data:RjGyX8xn4NVMJnmBSA84Fcbbv8K2eFPuNwnl9AibZJKxFb0/y9Jr8Tim5z5VNDu/WtndExSG,iv:Lb/DAHLWnS2x+1ahll09nYvX/WSkimohuK597ww9rTM=,tag:7xbOCNe2bxAqNzfXkBRs1g==,type:comment]
-DOCKERHUB_USER: ENC[AES256_GCM,data:S8ZTF/lxQg==,iv:TwDH2QXOgxofWXNSZSPxrUM11HDtEOKJxNRsE8wJPDg=,tag:hfdW6ZmTc79pHMGnf9W7uw==,type:str]
-DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:rLgGCYnbrTfEAC7s5E+aQP2/00Q=,iv:vDHVq6lNdJhjl962AN6wf5qjcsUDdUo70oApoYgDTBk=,tag:yUxuK4EETsLSFzGd6FlXOA==,type:str]
-NFS_SERVER: ENC[AES256_GCM,data:xp3rWv/7H8zlwsc=,iv:0V/SgMS5bfXusHywDeta7a4L0F2o7zreE+ijaTsqTMM=,tag:z5nJiV+gHt6HkZsvuzOPYQ==,type:str]
-PLEX_IP: ENC[AES256_GCM,data:X9KJXRnoC7he+w1+igR4,iv:vC3tB/eO57Q0iAUPiG8bFXxK2UPdKL80+NmRsPKoevE=,tag:59c4BnhN3ASkJnozIMnD5w==,type:str]
-BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:U4+LOw5dsTPK61xN5RaTBu7Ov7VPSYHkHQ==,iv:4W7ljCqJd3/roT8ptlZc45BiRQtloqg+x0qOFdASMwg=,tag:hlnyfwzvwVeXkUk35PtcAQ==,type:str]
-BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:sItdF54Vq8HVBNekUWb8GDJ9ugqs93+cqr0AxkebGw==,iv:btTXvOwpsQRgxtgmKrLp53d3fr+5pF+RI1I2gNGOyzs=,tag:zYI+Xm0C9gycV1z4bfWNKg==,type:str]
-#ENC[AES256_GCM,data:Scm9vZeq4GkhQFpp+TeQb6Vk5l+g4urCAvgTYGKNuhKefOhwjLE=,iv:rQud0L3oPSTfHxeK0UCOiZnqQtHVjuWQfa+YXRrpeo0=,tag:e4tHu1aEIspjitUDTpa9lQ==,type:comment]
-BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:Iqfa2u1J5/vlI4R98xDE3pSkSUY=,iv:3Ban7qO+y7AGJ5rVOc36GIqJOczPsHtj+5BXw8fvKbI=,tag:cwxrFY7JSaXgAd9Tz+WpKA==,type:str]
-#ENC[AES256_GCM,data:jy6tW9RJI9elhdbNWas=,iv:5ocQqYVwS+ueMNT+qSQt7ud8ASWVbS2O2DzRtlpDkPk=,tag:3LivWRfLqw8c8BgECgYFoA==,type:comment]
-PODNET: ENC[AES256_GCM,data:jfayILm/qXSL8PPGkg==,iv:zqrhL0yCzkowvH3hPUsF3EVnleyFzPUs5g6ljFoYFOQ=,tag:mUyIhNVzA/Yun8Met/UxYQ==,type:str]
-SVCNET: ENC[AES256_GCM,data:8p/kuA0auGjabrNcVA==,iv:KdVTJtGLDULXCyg9ygDeQp9ohbFG3kZfwddc9EFKpzI=,tag:sXtaw1LbwF3taT5dl2rU/w==,type:str]
+#ENC[AES256_GCM,data:gvo1PJXIgbPmZvc9rLkUpu+GBLj90fn0FD4NMBib9Q5Jx+tBn9/nGTDka4DEYuRhw+8UXqgVYsbZh7QxytkQ3iw=,iv:hJmCa0nBdDhRmSk1/EPFW80UAHt/51mS7ibM7Jiooio=,tag:e+64au9jKDbNoY28xglDiw==,type:comment]
+#ENC[AES256_GCM,data:Hh8LidtwP4RNmJUU+zA8tttZz9wpZBuf1qFAiw4KdM41wBz/TIbsnthpDck=,iv:wdBnCcmw+qK5BxGKzbBGfrc3npM+LzOJWtrkRt8V06s=,tag:dyh8XB/K+p+BH4E+XkSGyw==,type:comment]
+VIP: ENC[AES256_GCM,data:4oQXQLFnZC9b+oLOFw==,iv:TXZ4PQG9c3JXlRJHr/j8DlUv1+Gq+5V+klAaRZ2MI6M=,tag:KMG5x+wlmoa/EMy636cAmA==,type:str]
+#ENC[AES256_GCM,data:LNzEPzP0YHQx0IDPCbUOaIIHiDY1Kj9QDKxj,iv:ZwdRSOl7CTU8kHvKGT7wBn5iCyr8ENbqbbYRjWQrfbI=,tag:k/+kBe0stZWfmqZWa3UaLg==,type:comment]
+#ENC[AES256_GCM,data:xL7VrAy4hLgbPHTq8oJKUgGu5WyXl2Xsy1yKejxDsOYlvDfXIUX/eISoMwPXXjzf8kh6VhrFhDdAFtMhaquwe5PVCruOlsxNkTDB5JVbfhjZ9j4NLpkJlR0=,iv:Yg1tekuXhxTF1aMTUbnf8FTk/XuIUTEdwSuBoYn5UrA=,tag:M/avia6zol6dk5FiNKm6Mw==,type:comment]
+MASTER1IP: ENC[AES256_GCM,data:HXirdRjXMDD1MiyrXBM=,iv:hUggQUb5+24O4pFAYaJkJGEm+hF0Zo/5fzPZI77c7/Q=,tag:qTNXDsaorPvhdHWjpvqGFA==,type:str]
+#ENC[AES256_GCM,data:rDj1fgW9GcV4tVr9TcFtUDgcLoBXmG6fS6YhlVLY3z4kkw==,iv:HFepqjE8ChMerZuhyYW3Cw8qlpEbIvJ7s2ZrCldwe4Q=,tag:nMhAanlqtYj15N5ph4/7Ew==,type:comment]
+GATEWAY: ENC[AES256_GCM,data:lAfbJPqN3hF2g16N/Q==,iv:nq3LtRiSyowiHTbpkx3bIx/bPBsLol3QHMnA5LtfoXA=,tag:ouEVToBqpHeZ+JZS2vmfYg==,type:str]
+#ENC[AES256_GCM,data:NjduWBZld71qwco5XyadVMhmtSiRoRetylg7cu5kiawN2r98dAQeO6xmdoKxBIE=,iv:28x82+QmWSC3vF9EMCPq5HErxT44rRHJUj9HO6qIBLE=,tag:1h3wv8fDadxa24MceRGbpg==,type:comment]
+METALLB_RANGE: ENC[AES256_GCM,data:0KTgedNkmjTwM9rpOMRRzG4aEQuiwPjkU8+rCc+zpQ==,iv:g3ydsyA2JHGkOMwHDzTsT4AB7neQedyzE1hPPWSVQYw=,tag:9W8xsO4lWSVCpvjhZKPCNw==,type:str]
+#ENC[AES256_GCM,data:6UiVNVkh5vPIUPdxzBHG3t2nCSfNNDeBXOcR6uTF2lG48WrsMWv/yVkd3z9k6cskelHuH0+DiqsT3+cpC6JFgLOqCtBCUKhmlhfJEG8d6/fUJA==,iv:0r3wZgTtVBJ+vvMKOBZb7gc7SdBPzgpdM9SZGw99F5o=,tag:MSIpWoqGRBS1lLtrfZXmkA==,type:comment]
+TRAEFIK_IP: ENC[AES256_GCM,data:A6BcZaHK1gFy3BIDPcP0,iv:adk6XQxh2b2z+miRi2EN8guemK7q8M05OfldkcOQD9Q=,tag:/w0cCCHb4a6W9LVqkyPupA==,type:str]
+#ENC[AES256_GCM,data:rsNApjTZG+YLG13Io5GH6a0jyz47FpS3c6t/kIH+h04F,iv:xD1ESCuU0CEciKTj6TVBHpUoyDAjV4cljvg1NtWu4U0=,tag:RdV7HmpNCbFiG7q19S5wMg==,type:comment]
+BLOCKY_IP: ENC[AES256_GCM,data:MsVF+AbbUC1cxjtpfnDi,iv:3w04R0lLcD5+yf6uosK/fL5uPeYbZAMe3q6Pcr6oF44=,tag:eHwhLbcjNgI9iyXC7WQ0EA==,type:str]
+#ENC[AES256_GCM,data:M0T/qZyrNnRXeXhw+cwhH8YdDQVBsSuPGgXfkVFBbxnlfDYGvkD7VMQIW2yaar1cjfTSZlt5ONLExwzSIDL1TDcYGLHHiVX6IKWMrPRBjEc=,iv:UMDuqJKqIgqPHXCI7oEkMRFKLeTKOTMFdymDv9qc8nI=,tag:PlidvINGDf5Z1qxD1VSTTw==,type:comment]
+DASHBOARD_IP: ENC[AES256_GCM,data:+5VbTzBg2tOlTUcTENKc,iv:RlIrl/Jz9pWG3nrT7xFXvtnu/u5EEY0bKbMTWQjgEns=,tag:r/EBBC7U6c2/cZWnXD/9wA==,type:str]
+#ENC[AES256_GCM,data:C/FDzlasfrm0hnWxoyYaC2ITAWEMf4mwc5RfmNrF8ush+1bNBAI6bKytorp71caXtmbmFN7R4X1kIPMquGgpzAhclJGaKzDzqOPONPlN6tED6nGAEbtU,iv:whDlSIfw7dNdX2Z0XkVm/QydszKkJ1fDLP7gDiW53j4=,tag:d6+sRZMhWCz5gBPciX6Xvg==,type:comment]
+#ENC[AES256_GCM,data:XPhLBxh1Lj2PXr95CGmnDRNiaqt+uHRrrvtruX7RssjdSikIwN+DiLkjF466a/10Qw5Tic5Hf/nOg4kGIuzimLOQ0ZgJFDJCY7v/4qStvikzf0YLTSkRi9U3CvjzVPXa90+JX1hfVezKnaMquOFWhRNV43LTCTgfPthr2A==,iv:CW9V0+rLJIpIvfBgOl/DewmhUIiA/txtKw2fAPV0OjU=,tag:6/QxVG9Oo1NK7y7UWTko6g==,type:comment]
+#ENC[AES256_GCM,data:KwG4e2I2T8B6UqQpMtCdmvsd9uIHsX/TrdE4h8t2i2sJpIimeihlTDeHPB2OZBZZ651Kj2HJDsCyPtOjivqi92L1FdKmsC0J1rTczLFdHcI=,iv:H3B3K1Bnd3TyqXkWFvDjozyvAvKOiUx89Cte4d4f5tk=,tag:EEebRjP0mldW5yY8Z67ljQ==,type:comment]
+#ENC[AES256_GCM,data:eBPLsBgOiFrhHwyR1g6nLzIaerwLGnflTNkAxJvdLnGGGaesE44ffxFaV2WgDdSjwwKWCbhm,iv:nZz2m6hFnL9WtpnMrUEU1wZAzYbKi6rZhW9VJyf+DdM=,tag:N8gJAwA9p4Gj5/iK+6HviA==,type:comment]
+DOMAIN_0: ENC[AES256_GCM,data:tWFfvJBAqIg3kFs5,iv:sFuKMaAOfixJ/7P6gATnQn5bknKHsZlb6GkV0ERZdGI=,tag:Q1xJ2wwaXwwXxMufHEihlg==,type:str]
+DOMAIN_0_EMAIL: ENC[AES256_GCM,data:WIUa+rKI3NI/3tKRN0+zQV8=,iv:cBaIpz054zouXLBlnQwClRXv5yR6e03hYGDrlt9Bs0k=,tag:4fX6cm7oWjN5F7UVmaRdrQ==,type:str]
+DOMAIN_0_ZONE: ENC[AES256_GCM,data:5rZzgEaW9M6am+arESGO9zhm7pVyQ3rz+FHlO6u4uzs=,iv:0u1DhyqDtTsqA3PV+wsWlrsTyoCx8S4C72mbC1g2SuE=,tag:oD+fqtICpj2XmFQ3kc/HDw==,type:str]
+DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:sRN9Hnl7WmJeZRsbsFzM07wxDNR1FgnyLOGDl2/56Y4gWCToD+AwtQ==,iv:rRuuXyGhNXjC2SqGzbYBJNU8QZ/h4Fniwp3BS+yGnNQ=,tag:yrw0nt/Daui2P0rqZ2AgSA==,type:str]
+#ENC[AES256_GCM,data:Tqjng/MUF53Mvlo0Fw390lkDMsrUJiM5EejLFuywPV4g9WRFGvUj0ZZltfFUe+LPh3bp9a5uaAF9vqMVJgLODw==,iv:VQEO+CeOBMXgJ2sG17CCRO9+x5/pURfs9sGpZks59Hk=,tag:IKGkOAKW6HGEG/AZ27qjVA==,type:comment]
+#ENC[AES256_GCM,data:sTxWxo82mxUJvLS4W1AEaA9EDQV1vWGu7LFE0zULqCuQrhf4aYkgNZIfCGXTEtGP+uaImLIBAzo=,iv:+1OUifrxLK9cAiMTdFSr2qoaEIr6E5lsze1lcVyQ6PM=,tag:RqqaKwodKPTHiwRpqRCqUw==,type:comment]
+#ENC[AES256_GCM,data:XAisn1dOsCuK4FDcFm/4LMfdZKqXj2km5Q==,iv:oZUHOWWEOk3Mv8dUy+wFdDJ7pz+zvfDrkPRLSA83IDk=,tag:5o0nXRoEqlI/b3mGILsp2Q==,type:comment]
+#ENC[AES256_GCM,data:A2v3PCOpPKGfOlaGfmOrhSpseayr4kEOEkSyJOnvmVIMz2QmXscT6MsOXCha9yBFIB7OePdNs4d3qdxHWsWkAyGi9k5vZyPJU4V1eMw=,iv:CEDxd0EKa24CLeNDnwLS7Ecw2d0FzmdzPAGs3lb0PyQ=,tag:UcO0gboUUhpLuBxZXWDrlg==,type:comment]
+GITHUB_REPOSITORY: ENC[AES256_GCM,data:5ApUBo1THIovAkl1kuTaIqijcY+pJdQgn3tjWdPCfXg26lahL2jVFgS0HXV2eHXi,iv:EdLJ39lNDhovJhJm3QDIMquHjx5KMKGJOcwaZFTAk6U=,tag:q6zhszdUBEYp564/auTGkQ==,type:str]
+#ENC[AES256_GCM,data:+SLIYz+UKeCWJwqGq9xZ1i1l5oaXKU6JKvEwBdfo3cZQZLuUg/uhUmYEdvgoH9pUDYv1Q2RPC2e/fwj+7Gf1j9IJkfj/a1w=,iv:XLW7GOcGXk2L5snAd7D6R+zrKCgQtBvF2/5Xxl9CbGE=,tag:Q4KqCYYAaP3DeVZ/DHYmLA==,type:comment]
+#ENC[AES256_GCM,data:G0Ihp/X8VUQFpjbeMSD6tr6snY9YuN5bMzJuUs1qSFMITw7J43FThIxW6bK/7IWieMuLY7JX,iv:+5mKP1gLbmVd9SnJDwY9gSOIdmP/u7WRNPGiop0mMQg=,tag:YRcAF/9lgZO1TFnGaLDtbQ==,type:comment]
+DOCKERHUB_USER: ENC[AES256_GCM,data:YY/9Buwc0w==,iv:ui9r/0RBjKW9KuocV9JjXq/ZeadnT3yAo2OiKAJcADQ=,tag:HsLpreUy/o3LQRW0HbBRiA==,type:str]
+DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:EY95JgXaoL4GkzKVD/+kzNR1Moo=,iv:BKSfCAz/6agS+p9CzS1AAeqlP+vcLcnC0K5UB/n2qK4=,tag:B8ZmArDI0YA1MwTXE08CyA==,type:str]
+NFS_SERVER: ENC[AES256_GCM,data:npunmutWbafafEo=,iv:zhYHxvGhm64IAYeW98TOF+qEewoAlriaa/d2LXk8VeI=,tag:MhCXWG70xZP5hwKZFpm3Pg==,type:str]
+PLEX_IP: ENC[AES256_GCM,data:pjnRn4ua0LzbnQeMZ3QR,iv:wrheTUEoXZOgPP19C+uz6+qfMg8VUQUml28Y2tAfzwo=,tag:mcUOwZz0zGcExii3AmtuOg==,type:str]
+BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:MNNv4sL8dzoKchuhS1VTrgzj5gr6TU9okw==,iv:JNSUI0qI7InoT5A0BgqecZk2zK8FHGmw+7eu8Mf3E/w=,tag:ezMHZQTPSw1uoYPIj3xOXA==,type:str]
+BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:36jH/igBDyXOQjYSLAo5jZPi8JfE8L91tv+zly9ZUA==,iv:Z4F72gPDAjjcwmDmgafC1aa9lYLsX7Y6uYIthCXkI3E=,tag:giVI87IGuaK/kQLwM7NgGQ==,type:str]
+#ENC[AES256_GCM,data:XhovvCPGFRxFtX0WLs2NLth7Wm41leesk54tBcGIFfeNoQMEvkQ=,iv:oC6gFJFM+HDO0jjV2jEkoy7+XdffK+NAPUbfAZVgD0w=,tag:QTmupOS/DbBC0KtdR0DFlw==,type:comment]
+BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:RxwRK91KjdM8+slg6LL0hdcZ7qw=,iv:u3l9wBRZRPD8FUrRg5d2+ZyanRev9AzduR2mi2FoiDs=,tag:sWJoEL6ivaVgiGf2W0DLuA==,type:str]
+#ENC[AES256_GCM,data:kJuKLcOEKmX25b2Gf3o=,iv:h7JLFEwE3UgAEWNPXbTSHV52nNsjz/XkyXy3jc/DqtU=,tag:M9dtpPX38MskKzBh5jCJyw==,type:comment]
+PODNET: ENC[AES256_GCM,data:JJYmgLURPsFeli08Sw==,iv:cHoTT2xVCH9QACnwC+/LQpyRGvsWoWI8LvvXfzZQcSA=,tag:zEYd5ZpyGlBWJFH0r2lBqA==,type:str]
+SVCNET: ENC[AES256_GCM,data:/Jr7EMGQseBgl2jRLg==,iv:1hdvNG0uxZ8K5XRFAF4o+jGIw+tzn4t3Jf4SQY90KVc=,tag:5JNDmgarXybPrGbbbU8SfQ==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -50,13 +50,13 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBkRDNUc2pvY01tNTNuZDli
-            VWN1d24zOHZZVVJpcURZK3dpQS9YOHhpYkNjCjhkeVA0My9seGRuanZZWndzZjdK
-            ZzllVmRDM2tyWE1NaUNVREZLcERXTFkKLS0tIHY4dmN4MlhDVG1raERGQ1lVYnlB
-            c0Ivemg4MHMyZlpDUlI4bkFjdUhIelkKWUUwcWAlbhakOO1V+H6wJ9aec8/+8QUu
-            uE5TDHi/4T3kG6LsJ/Le4P0VLwbkMXdMJzNIshxE5Mo1Y0ZPUmGNLw==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSB0NHpORlBtTUlBOWR2clgz
+            K2ttT2xJNjJpaVBOWWVXQ2Zlek9jdVZoblFNCmhNMXdIYnF1YTU2cVdOeGg1b0RK
+            c0xNN2RIb2hxQzEwb244SVNmVVR5YlkKLS0tIEpJMzY5NDhnUHQ0ZlNIN1JSdFNF
+            clVBb0d0MlIzbUJPOEFmK1JJMzlvQlkKt5/f+5R0KOFrk+zj9lx4qcO6BpTDJtbE
+            vBPt7P17C2DcLajSC43Rku1VPixzmktX1DPZWrzOk4BsLh3MVF/VNQ==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:33:50Z"
-    mac: ENC[AES256_GCM,data:39plrArgSNVwC4kpGlZnP7YL7LU23HLjE8Y93qHL33ayaZdn+tQP03OtYBmu5jrIKeFP/iRAxTIXeKtZvltNvemOL3nqNgvI8nc9EX86YVv7t5CoSRahSRdn33ty4dkWVUjhs8WMcPJ/MKltTC8+H6VP/zM9GNN4b7RLabuIKhs=,iv:FiKcNaVDuoGLf0c6Yigczd6KCDSXCiU7FisdP8ffRYQ=,tag:8hj7ZP/hBmlL6KGoQbHNfA==,type:str]
+    lastmodified: "2025-01-19T02:35:22Z"
+    mac: ENC[AES256_GCM,data:by/Q07l0dcQuI6CxoaKsBWTOURTsHJovH4XVTFmrf4YJlrJ1fZBCZJBTJWyZ5Zfrchba890RSYYa/vOF27s8XtBVR7fiPxUlu0l3N3pmXlkiQ8sEK0va5qwtkfMWwLSaFIL+Mjzdn5iGX1tMrosEtxDQRqBYs6rnSo/+sQdcXk8=,iv:+Es3EGgrSamnjIKekvilB4jec0i8/xMStp0wizTtxRw=,tag:IHHyOkeVQ21Ciw+Sy7iodw==,type:str]
     pgp: []
     version: 3.9.2
