--- a/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
+++ b/clusters/main/kubernetes/flux-system/flux/clustersettings.secret.yaml
@@ -4,49 +4,49 @@ metadata:
     name: cluster-config
     namespace: flux-system
 data:
-    #ENC[AES256_GCM,data:Wo3DgQnz/QW/YXLYHYpG1ecEC9CTGLPpLvDOhtxKc0ZwWzV1JVd9lfdpZlBitwd6RDQzT2cmsxWwqqIiS6UK7cs=,iv:JvNi9w4z2zkNLTmWa933hIslqtJzDGgbjUB5OOb1pD8=,tag:O6kM+5Ljr7wdbH9oOrY8AA==,type:comment]
-    #ENC[AES256_GCM,data:qNoBEOQ04IDWTD5KL9E2SuVI3QUnRlsrUDyQ2Ve/F0bVw2r1ZleNqsRZ/6A=,iv:ZaqHUJZAJSa5PV+qrOjrmUCelgQvg4sWCnJ99zDvftY=,tag:+STEYi9t+N/ipVvCPipzKQ==,type:comment]
-    VIP: ENC[AES256_GCM,data:gmwk2EozlZFjtOfDyg==,iv:/Ir5kC8CiwhooE28JLp1tvA5bydzeg2YLLEb9v866UM=,tag:dfaPy/h9VnD5ozCaWQVI+g==,type:str]
-    #ENC[AES256_GCM,data:IdE4p+fUYaKCLEeiwSld6ZNmF8tH8bT1fn7M,iv:IpwNW3g4IgGm0m0/Pkpj9Ms8ygQ1Ne7yTXvhIIAIAIY=,tag:vtqiIQp7n3+IF+bNzzw/mg==,type:comment]
-    #ENC[AES256_GCM,data:+gQIyBdQuhq3SWTDD0m7MfpH95MQFVHR+ATLUVR0uBIg+mwHSPUTk+OU/K/zL6h8bEImzGnY7EtDpVpxezNuyIj+B2z9lKC2en3lgk8T5Lxv6vX2VMsSbHE=,iv:b+UKihBcGHRaLA9OIIEZr8RZ9+ksbDj23bh3PiiLpFU=,tag:RCsLK/jEo4lPE7zS9ojj2A==,type:comment]
-    MASTER1IP: ENC[AES256_GCM,data:OhVUybyWnNyGUHsWJPY=,iv:yDr9k6KmRAXQFi99M1eB9vr46iUSKOBYpkYnV9NYMWI=,tag:xJ+puahQ2g+K3BQB8wZ8eA==,type:str]
-    #ENC[AES256_GCM,data:vWEsd4v78JYp1Z7JF1+aU2FgY+X96ZzABY9QTZ3Zxt+o6g==,iv:H3wFUbv79gTuJey62q2snvdXMLL0r1WGu3NSaIM3RAg=,tag:Axg0hj1kBAT0L9rv5rzkqQ==,type:comment]
-    GATEWAY: ENC[AES256_GCM,data:nSKjb5go+/knK+p6bQ==,iv:SXXA7GaoaOl+rl8hWDCgVxA9dTqijYgQ3m9EXzXyJLI=,tag:YhXHbUCUzAa3QH4ZmzW6Vw==,type:str]
-    #ENC[AES256_GCM,data:wNnv/ZjOfntv/O6mroOSQZkiaSoe8A4gDbuMKl1qS4R6xShgO7vOGeMQifcHVlU=,iv:1FLDJ1CDM2RGNEZ5Cxk0eNyT/kTnDfL87CZDW6xMckE=,tag:G/XCq7VKtT7hGWS/b9uaeQ==,type:comment]
-    METALLB_RANGE: ENC[AES256_GCM,data:Xg1lCV2pv12JqdhcTuEmTcH8lQBuT2aBfY6ulMD1Zg==,iv:rvkAWs1GrWkNTkpyIY3bx+rAtUnRlQcl5bzFU2zme3s=,tag:n72eePcRvzozsbMf0i5eqg==,type:str]
-    #ENC[AES256_GCM,data:vOCpf6f4rJJtDve8JAgIs85xbzX6ur4EG8H04TOYkafLt2cU3L2O1boFYy+pHfsbcWM8r8BA2DIEPL7SrA6GsR/+5blAFv5mWuMDgHwpUyIS8w==,iv:CTjQYbXUlUxgU4Xc8kMpZELq+PAjPQtvHbKwkw8u6qI=,tag:KiqZohP9SZHI1HG2B4MkXA==,type:comment]
-    TRAEFIK_IP: ENC[AES256_GCM,data:3LfGujgQONK4LrXy9yUY,iv:DKB8ndgVX+e2z9LlL38kbUIg6IaydXjYwesxceU9BRw=,tag:R9MwFd+ff3XO8Sq/U7aTGw==,type:str]
-    #ENC[AES256_GCM,data:eJllGssu0Lw2Rh/zXZK2iu8zvv5KfP01cNEv32b3fp9P,iv:lXoV98JiwspPQNHUH4TTGlSTFfYl5p0kRuqUhKTMFZc=,tag:mJ7a8PDxMrYfFkPEJiMQQQ==,type:comment]
-    BLOCKY_IP: ENC[AES256_GCM,data:TgM5YKxYMSSKHZlDHf65,iv:LpXNX4HL4wKoMrWrt0NAMGJirsnH0EcN8RPV84dU7q8=,tag:iWUkMb0fTpRXosdgeezrmA==,type:str]
-    #ENC[AES256_GCM,data:NudVa4fQOoos/9gyPz0LbskUODgxgSlh0sUe9tO73FI4ME26NZeRGHwkS9LySIsHcBu1CATQqA768ejjkEQyNqo7rsRGO3uqTfvgRTA1oNM=,iv:x/IvqyceayPAN6zG+0cHHxasIG0qKHjtVmXlDYNEhlI=,tag:ZJoqK/uyJz5sOOkjeg1OYA==,type:comment]
-    DASHBOARD_IP: ENC[AES256_GCM,data:IPm/HkeeT0KiLBsDkybc,iv:cNWGHW2S95dpC1abeBI5b5StH7CQCB4JjtzGJq3ILsQ=,tag:D7PHmTTukmnhtF5dsbZG1w==,type:str]
-    #ENC[AES256_GCM,data:/+Jxp7NGg/xhDsDaEJdccH9ToJX0FuJ70C7TzttDUA2MdEP/SKfX5LMckj6qU2dHtnmV0n52AmVaIe8uEpc54vuhfLvyjFx9qX8bne9mWF26fc8f4mQx,iv:ReADFc+WgChnWB1ktdjVPUx8aMmH3vtmQ5sCTgmKavY=,tag:1rZ9nRfedrhN8PNB0NC0fA==,type:comment]
-    #ENC[AES256_GCM,data:/9qBYVvTL6GyRw0TijfYugaxPKdka8tUPSg20CnWGtYavNKVKr1XuTSJRZ26ZPc1t4aia10r6OjJ2rjXvZ2kw3WqE4MplreqeIaT+e5v98JU5sSxBe3H0dPg/xIiXgNtJa81mxgJyI3PRKXW/4OS57X/UOBYOBcMNRg31Q==,iv:0NlYC1IlOMrSLaqUQ6raJQrCCGFZaB1pL3oeTbLX1uA=,tag:0RS9UDtdBETqW9MeDK2p+A==,type:comment]
-    #ENC[AES256_GCM,data:DtnTRO43vm7yy78CXG2uGINsb1kk22yPWhudfHQaRtnkuV14QBFfZGAFXQggwifS4I5uOj2jNWnkaCB70GDovtg26NMObaePX7LKdZrl4KA=,iv:8KEpd6xw9JCC/dRcJWNSnl0gI95hf17VBpb/L68e4MI=,tag:RRlfA6L4waLotLlnvDSvlQ==,type:comment]
-    #ENC[AES256_GCM,data:oNexlMJ9mcQhH25rXN/QEEiOqiSoQIzbyMIywRhOQ4o4+O42D6eNhFLxz7yTcIeHMhZatR/p,iv:hr2LBQspVw1AhVig8fipPRLzSnfkfReUqopJLBj2jfA=,tag:wcNnvXmcAAMiaK+SUB154w==,type:comment]
-    DOMAIN_0: ENC[AES256_GCM,data:YfCSxAbIRjAA8ZtE,iv:wywgED+IgAWCv5s2ugwzSxWs8uW7dh1ABu09p9ADTDg=,tag:06bpGJrif6pZ3CA/gVdlSQ==,type:str]
-    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:a8NH1JN4OZWDBwu/kGfKLSQ=,iv:/nBJTh+2ZohgkQs8L9/CB6wF1Kkq+H1fwjHWfOqyZRQ=,tag:d3Rm5wyo6VYUW1fYlDX8kg==,type:str]
-    DOMAIN_0_ZONE: ENC[AES256_GCM,data:fc6Z75weJ5af75e4xFLLdycCQ0l+VAKB1XhDUIJbBkQ=,iv:noDPa4gUcmfR+xlHywbQgucbyHbnNgIyS4cNeTjDnF4=,tag:1WRp7AMQPyjqcfPgXnlNPw==,type:str]
-    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:dborKk3Wzu1Fim4eyFR+R9z41EZRi3HfCcgh3kepa0OiyadOibF0og==,iv:m4D1ZBL0JDv1aMkveXXUWxkd7R29SAtsWOPeXm1pEjM=,tag:tBHtMA1yTfj+eQTQlbXtsw==,type:str]
-    #ENC[AES256_GCM,data:0goqLK9yCFoFb6nTCPYULEY8NSgypxBY8znEz9IQ4N/Bx84dZCDmhIeRZ4LTbGY0LhqdvbXUVlkv+LWKKbZolA==,iv:cuO0y2Qkp0xjGr1yFwx42ySDwW/yqO901cYhEWKmGVQ=,tag:LsSPpZuTbuXfm05xdG7eqg==,type:comment]
-    #ENC[AES256_GCM,data:j/Zk/bvhnLyKRrpOhaKnfwU0Do+/42idpvzcPB7axNdEP95SmM9QLUTRtTuX3pLjhE6k648EOMM=,iv:F8FQkjgrqkrnw23l0NEgUEg0eB/PQhv6KEuhWXGhU0s=,tag:pjH5Yep819mT8plDUqGBQQ==,type:comment]
-    #ENC[AES256_GCM,data:J/lxSlvitNuMcQhkT1u5UqoTybgx36T2YQ==,iv:Y09m6hH1jFKz90madGsn9W5N+gzY7cSLk4RRsv8pEu0=,tag:xOqySh6mQxbx8Z9/ikDTwA==,type:comment]
-    #ENC[AES256_GCM,data:rsLykzhIjuiV1oDf2uk4x/0gmpv8jXsuVG4Y22SRoFhhQdmXD7IjZV7FI8JcVr++b5dzFS3t6rBsly+mC7JGTTC6JKWwV96Ld20DJD0=,iv:uLAoykGJloKOWltH2yUwTDz4Q54XpXXlcoCUG0TffAg=,tag:YoI1WpRzPvUkjk3I8Ruwkw==,type:comment]
-    GITHUB_REPOSITORY: ENC[AES256_GCM,data:j7LPSC1ExqzkTsgEeD43PixqRdqsbohReI252VCQ3bEeR31xzB0FOHV6PdY5VGn7,iv:4f/N1dllHkeft7gk2ajAnLtzzyoGLAja3NSb/Ht7UW0=,tag:5IwA5kQjJkHNfbUFhoSQqg==,type:str]
-    #ENC[AES256_GCM,data:WbLMDXojI9ZmtRyOjdtW8bpwr5a/z9UgECT/gJih6vPw4QaRt+Ilar/2VmnNaZxOy4Evk1eu1yksDdt9NfV0ubIDOXKwcfc=,iv:TaELi6QYWPlSB+9vSfbgo2NC/178hl/BYMim7OLjZd4=,tag:sOrHF8A49tNAN0YqRmufoQ==,type:comment]
-    #ENC[AES256_GCM,data:cIu2ijFmCZAET62zeS73HRavTsFmHRguQA9jsp16NshdZX67aiWnRSpJB1NLSFudVghIX9cs,iv:ibgRqY7hxp+azanois8q73g/w7bqh11VHGu1NNp+VF0=,tag:zgm+GNXhf3U/O8QXTDlOPA==,type:comment]
-    DOCKERHUB_USER: ENC[AES256_GCM,data:dgnGnQHSpw==,iv:FfBouPREkIAvRhnY/M8ND7MQbsbALBD5xLygR9stey0=,tag:8i0mgqWH8QEiUat09lBRXA==,type:str]
-    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:B0EGelSMGuK2PClOJplcYVrFgT8=,iv:Em7F3mZbSgmEvBMQBjHuWc3PyqxGqwPuhHofLT6bcyE=,tag:FC5dGiPAi4LePz+hTe+xGA==,type:str]
-    NFS_SERVER: ENC[AES256_GCM,data:X+g7nDHrJGVmZZE=,iv:+FVtbuc+diarckuMWw3eeIoaUk9uPg1aGtQUKG8DKrs=,tag:pvfY7mGM+/FXklQH5FcXfQ==,type:str]
-    PLEX_IP: ENC[AES256_GCM,data:aPNmWmbuJJmNzSuHjY68,iv:Wz7Bx0Oq3qrxHuOtjfGEfps5P+UP2+8jdBViNkD0n7g=,tag:9J/NFzxCrmffjOZ0L5iqrA==,type:str]
-    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:as1sNlE8p+PYmz6pfQs05dlg7nMZzal7Eg==,iv:Uh4IPYVoxtLaOMteA33nhVZyDih+c3eIkcnX5OVKPOw=,tag:nZats5uLupvoDUdswd4v7g==,type:str]
-    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:n2bQ+fNQCNVLUkShDD/297OdUMEW/8KqoD3/WWYFJQ==,iv:tjUVabxm1XHGzQx6Z27FXynHcoUp0mzccPGb+05r3ak=,tag:0YQp+Zdvw50Gp/jM/HXjRw==,type:str]
-    #ENC[AES256_GCM,data:6kuH0/XQsWUZfIO5sw6U1hAaHwEU73uww9CxrMfrnbV4qip2UZg=,iv:Ir7EpfEzuLsHq/LhO7U9tuNp2hnbfuw5yP0nCZYl+Jg=,tag:ehkv04BEXMMfnlBhYKuRDQ==,type:comment]
-    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:6DA1BHOmdL5ShTj8kc5T7+KDg2M=,iv:ieKr1hDxPLCtnQGZyS5nI6dwarzBVxqhbT/ifFkjEp0=,tag:k3V9REFAQCHqoBhHdoDtaw==,type:str]
-    #ENC[AES256_GCM,data:XhZrN9GqZjkrhmxIyxY=,iv:3zs01WovJAQ3IIQcU3ZT89t3seeUN7gshTnh+Wl0zf4=,tag:hOtS8vieUEo06F4KaNyMng==,type:comment]
-    PODNET: ENC[AES256_GCM,data:F2QnvDYFwCFCOboJbg==,iv:VEAKTFe7nLYFHx/K6JeAWaQq6XCkPef/h3T356yt4QU=,tag:tUpKFYJ9vWbODiomF3jgxw==,type:str]
-    SVCNET: ENC[AES256_GCM,data:WeUtgFekyB8lTsedlA==,iv:xfwRDHE3bq7zBc413OBdlY5vd7PekX/NUBpZeSrMiVA=,tag:ANcJHr6Di5y7Jem4nRItYg==,type:str]
-    CLUSTERNAME: ENC[AES256_GCM,data:2bxqHQ==,iv:KV5LzDQH2obGyk6sWQgs6dhJ5wABgPifSzRrXiPyPpM=,tag:jdB4n5skMrh+81OQWHMLGA==,type:str]
+    #ENC[AES256_GCM,data:jmShkpAA7B9P5K/L5c/sbezsP1nXR9ja2uAQfhaYTSedvLCb78PYjZwx5JkZfsBSO7zFJ+3K1568eWUzqPaNXY0=,iv:PbfB5NPfyAWJLwbRPa/svK3YhxAueQ0O1yziGwIPyDQ=,tag:hjzutixDEOcpxnrDs+e9hg==,type:comment]
+    #ENC[AES256_GCM,data:RmQlI/2cxX3qcHLn228QFL+s726ZX16fjHeM36u1Uq1j2yOwhjYZq/C6Fds=,iv:/VHhZxex+YuundvXZ7Blf3PaTPSCkOkikM7xb46bIoE=,tag:wjEBQIxW9/J3/lam+R5QVg==,type:comment]
+    VIP: ENC[AES256_GCM,data:vt6aGrJWjK61f65X6w==,iv:zgEZEgVKhG164GjqEOkdR/Mt4PfbqFVWzoD6Ow+q0q8=,tag:iBumXzMOkV/Os0OYLFvs9w==,type:str]
+    #ENC[AES256_GCM,data:jwggMx41sASaA5tQbxqCXum19abMiRjfLyxN,iv:AMqlzuzOtIT6v99LCw5LbNbSILQXRSPsbXhuKeZo2B0=,tag:Pdsad6qMN95zWRd2918ipA==,type:comment]
+    #ENC[AES256_GCM,data:9hdeJipZaqU0p5juybxEvHSRnOoIhdC1VCDGCTZI/77eecyvcfzIncZbSPN5BFiYGJZrg9tFGEFSh6KljwSyXOr2d8tngQXe9TSpQ7yueaLCOnw4FcDrcMs=,iv:1PhGjaR57EuPWPjCuKiTu08AbxiKbKO0u+ReLZAJNy4=,tag:j1W4YuRR8olCAWw6PNJ8Sg==,type:comment]
+    MASTER1IP: ENC[AES256_GCM,data:6L5Uj/Op1HCRL/+tXT4=,iv:JNDUSsbO4glgIk808GcZB+GlYndDDmRsizrYPN94Lhg=,tag:Q5SGpSbB+mU+VFsfIU2J9g==,type:str]
+    #ENC[AES256_GCM,data:qdaU+azuiXtsvY4X0eiSZBoyvWmRxtBcgzx4S9BKBcUahA==,iv:i5ChWIB3b7YCL78gxgpjek/hlqXhT4QTvyOtoGHnfNA=,tag:x9cKK8Dopb/7sLUNU1T1Mw==,type:comment]
+    GATEWAY: ENC[AES256_GCM,data:q8JS9853ehn4E3sCRg==,iv:Ygi8SwsnndQtQRsxaUp5iwVXq6uAkewcGCgq+5fFI2Y=,tag:zNN8ANdisTQnEYoHju3c/g==,type:str]
+    #ENC[AES256_GCM,data:AbQ34yqsInrdWeE9mJrwdhtVLFW84BAqIAkCCXX2CpXqphypYc90i6W7vBuCOKw=,iv:+qFJfZaW6znYqHGwFbUK2lV8QSC5XYtQJZpSpP78MoQ=,tag:l/YjxOGyQ/GepRSu9JvpJQ==,type:comment]
+    METALLB_RANGE: ENC[AES256_GCM,data:cc2R683xOgSMaRgpZwcUBdb4walIGGSlNiqz5Tb9UA==,iv:8OtNbLUnef5X4hE46XNZ+vRXxwOgJnwD6oRp68JzfLQ=,tag:7ns6KoCcVXxE8LqJ3TxtuQ==,type:str]
+    #ENC[AES256_GCM,data:6LUG5xyTbS+tVRCcMaZmWUF4PVnXIqP5/+3gVcSgIXyFMq5QVsDfNrnwjkFol+1qTXMOKvh4GHc64E0znwBieHacjXgGFfxJaUD2gBKDFackug==,iv:TZHE9SYmG+EM0J40OvB6IrJctBVamEUnO5FdjVfJGOY=,tag:SfVhlk0lDWmmBESKtjKSqw==,type:comment]
+    TRAEFIK_IP: ENC[AES256_GCM,data:kfODUZo89gqqNz3dJ62Q,iv:192Z2CepsdG1DbdTinInMwzQc5E5KzmUGMEe1uUHpuY=,tag:db1MPAca3hEMY4A6ZTugbw==,type:str]
+    #ENC[AES256_GCM,data:peKHfT3eqOAA5MueuxcuT9emLF1zxlF8ziq3VfbXfX7O,iv:Vm715o9zDaws1M6eFeuLut1hdJIXtC1rbcceu5NFBiQ=,tag:OSejX/vlIdCLrNKwjqB1ww==,type:comment]
+    BLOCKY_IP: ENC[AES256_GCM,data:KTvJ3gKhk73TFlheMQ7w,iv:pMOjKDZWobE2CPf0C2r/xKs/Vq77lQAS5sSPYcANq0Y=,tag:F+R7Qgol0NWkC5ZG581jQA==,type:str]
+    #ENC[AES256_GCM,data:k2gOQ60tzbyAIlY3THQJcstwSAt3UqWh71RpKPf+yBBDXaONs3b4yA4FkG+2DAE5ZcaWmCjcynUBP2bnxpNQ1lbXfAjNpUA4frwiPXuRKcY=,iv:w4guGvFbc5yqLIa1YKqFsbRphesLqDtLNsIKK7mwNrE=,tag:rB3WJ/zykhBkDf/y1u5iRA==,type:comment]
+    DASHBOARD_IP: ENC[AES256_GCM,data:Z+DFeu3tLY4GeEMRnaU4,iv:73IwttGHhNWvTz75TlLGNyijvZCVfyABZ47JhuVLp/k=,tag:x4wdMPd8cWVedxwbWzuOEw==,type:str]
+    #ENC[AES256_GCM,data:OUjoHtSODFzTp6Cv6T+tc4b5M3k34u3aVjDxgEs7LwNDEHqHtyxwXVYtoZ5T3kbw2eOWZ6PKKvUf/2RioimvavmwCopzIEj7n/CFWkZPLrD5wgmQdlq0,iv:9+FcTzIRUIlGsgoaqdmHvk6HTML7E0J7Orkw89NqpiI=,tag:71uyr/j59FXxE9/HDdMv6A==,type:comment]
+    #ENC[AES256_GCM,data:b+Y9HuLPXjxwyLjo3hPMUTctc27RUYClR3+abpAN4d+GGlnwv5fr6+v9kOU+emLqv/6mVIoPLJPz3WeGNrzEPRQhE5uXvz4JhryjiN8cr93a/SVsM8HP9Ue3XrMsciM1h9In3LpNkviepIzKNRbRVk6mn/LbM1w9fMDSiQ==,iv:0skoYQzkSDUwX94hfx960EBLdpzEfwTv5QQvGLmwjl8=,tag:cCpezXWCNIXIc64AQfrV0Q==,type:comment]
+    #ENC[AES256_GCM,data:gmYt76DKtqG+q+NxIx33Jb+lPUw7QXaupp6B5aXeNgQYYVjLKS9NL3qXe5DzyMzbmXWdz4mjidJ/E2oUqw10rDtL2xOVCjBia8kTu5Grsm0=,iv:5cEmUKPgGZpQgMrO7Mvgzony7srNsDZMa7hxQNPHxLE=,tag:9oVCWcE/W1+JzmBDY5sj3w==,type:comment]
+    #ENC[AES256_GCM,data:iPOeArK72cwVn2PIWHL28f4lgn1Ox4WeyP+mqgudwGwoWHb1sw93Bvajw1lt5TSV5+3hLThP,iv:lp2Mt055eUSqhSvOa2mTPYfZpOdcPq8WU016euY2PmA=,tag:gPoy668v613nPrltZS7CMQ==,type:comment]
+    DOMAIN_0: ENC[AES256_GCM,data:i97i05NPcRsnDSns,iv:YWkm3h7Jk7WtnvzAoduODwValskZvMXfZjeoJAwin60=,tag:HFLaqVvHcb4qiETeWLY2mg==,type:str]
+    DOMAIN_0_EMAIL: ENC[AES256_GCM,data:P7E4gOiGq2Yyipu92LujAUg=,iv:wzMStytn6T0HWCq1loJH0ahZojFuyuemJjVek4XRJd8=,tag:0GTejNA7+AxZ5rVwfvi/tQ==,type:str]
+    DOMAIN_0_ZONE: ENC[AES256_GCM,data:r1me5n7Nl4VRiMIc62o6qSesW0IfmfdMDmcgip9NMv0=,iv:JngIiDIK7ezuEjdyEGpJHtA2xCMTe92wjHj7mMXZdJQ=,tag:76P/k369dp0gVsfIlOj25g==,type:str]
+    DOMAIN_0_CLOUDFLARE_TOKEN: ENC[AES256_GCM,data:qMxm17DnALz06i+YmVsBixwFBsZjH+KQpTBB3hnd28v6Sq69ebFzVw==,iv:6uRWe4/+sfbPLExG9iqBratznPSlxLmg3rahqkucFfM=,tag:4SLH19yFiYpSrxE3XXrU1A==,type:str]
+    #ENC[AES256_GCM,data:sxUctA1TbzxpKaARqs8OzZ0oFtJdQheMNYh43901APHIUeBrMn38kEFchNcosDBCWPN06M7p4bAM7hK87+0trg==,iv:NrsgU3HQKmOz2zVhFNqpxDP5zqshmU6AwBfwi9TWrwE=,tag:gunrFJnNESXRhlF19mG0/g==,type:comment]
+    #ENC[AES256_GCM,data:7tMwF4X8DPJkGLWMU/j4Q22LzFJPG9WMNE1I3SlKe7CR/XYxRCkUcGmq+nK0gKf8DeC8PMsuQv8=,iv:gWg/Kc1MHXF/4f9tB5ZIWph3rq+5HOuhNcqpUIwckos=,tag:mXR3RpOViF8zgAOB8JvjrQ==,type:comment]
+    #ENC[AES256_GCM,data:pHXMwmSwfxzM7opUXZRPhuOcgV0PsPg1wQ==,iv:oslR1sEcjU5ZXBuF4J4c2UHiByOy8Fen8X+nksRwNiM=,tag:93FA6l2Vx/U6oTx9I0ha3Q==,type:comment]
+    #ENC[AES256_GCM,data:0cgdp3UKkqFh2q7mFqq94/lW1OpmJkfVNxOUbFZRqz2EtimenPvUXonsdD9MfjPB4oeHxoL4w/d4uc4g+lRlNgVueh2nV/OrN9udrSk=,iv:RagBglLZDUS0bP6FaVP260UUovMNLeC6UshhxuPqQic=,tag:QGKv6lH6N5m4d5KZjvMKMg==,type:comment]
+    GITHUB_REPOSITORY: ENC[AES256_GCM,data:Ib8wvoWwjrNuASdLjrNZ7liZzrW0ETfX7EnI9NgAXGfHABj+Qm3Dv5Pdo7vGnxIl,iv:NjU9mjqh+LG2BxIc/9YbgtLYueJKrhBXCOzr3HBFAoM=,tag:ML8sEEfbnIubk0N8Ng8xaw==,type:str]
+    #ENC[AES256_GCM,data:gwRXPZiekZyMIp0MuyKwNXblpETHJuykXBO7krOuzOFvx6KinQzMi1IgJQtftCRnT/aIuiS8pCO4V+Ne9KOHQzxJLBTVdq8=,iv:eO0seyK4S4i/5T9RjqE4U6bFuqqaTCTuh3+DRBSxILE=,tag:ruqv9jRbXlHMI1DC+n4viw==,type:comment]
+    #ENC[AES256_GCM,data:Oz2y+nuPmqVe9fnD4CUGPFP1WKIulyEs49t8xhd+ur9pLbqYaGAXBLLmpYsrKQWzST07+3g9,iv:6yiSx4j2vkNYlYqbOWHmEBxZfVWbfezPG8K6uY8PosI=,tag:b66KGwUI7pT6jH84PUHPnw==,type:comment]
+    DOCKERHUB_USER: ENC[AES256_GCM,data:NEJZtGMoqA==,iv:sLh5oBsDIuy3S8nCJ0MQgtZNArP3VlFOFMDITR5HHTg=,tag:GKdTchIYflST59s7wKJKaA==,type:str]
+    DOCKERHUB_PASSWORD: ENC[AES256_GCM,data:UKKr617nxqhpST/nl/fG/HYaHnc=,iv:4K+6wwx3OeGRRjwxW6KSF/e/M5kZAoguSPIpI8rMHeI=,tag:TNOMQXNplckni6aM6GInRw==,type:str]
+    NFS_SERVER: ENC[AES256_GCM,data:zc+Vpsopltq9nls=,iv:mqxs6etEy8lOUmCR+9GclqJLF4eSEQJyDUBm9iGBQR0=,tag:WFLvAXZbluq/m+/1WlsZtg==,type:str]
+    PLEX_IP: ENC[AES256_GCM,data:NugaWxnh98NaPMhSvcHJ,iv:6bJ7x6iy9V91gBMuuz7vagbXW6pMyXliUw9C3E3BIsY=,tag:LLd3kaNVO7rxDHJJQ7l5AA==,type:str]
+    BACKBLAZE_ACCESS_KEY: ENC[AES256_GCM,data:uZVPwIJq1dbfDbOPsipI6PxrbJ/TqlzDbw==,iv:6xeU/ylS4CGVjoZHIKT/I3pczbrJcjLT+zDnROAzKcg=,tag:Iv/1nXYSr0JlIBxusKlWdA==,type:str]
+    BACKBLAZE_SECRET_KEY: ENC[AES256_GCM,data:3BPn5gd9Kz+rC0ACKx5YMIHe15rPrzz/kpJFmICK2g==,iv:DhkkuUfI3f0ltfAGJGC/H712baSGQ2jpT/ZSHI44a74=,tag:46Jry0ROR/f9cmXCoUWzIQ==,type:str]
+    #ENC[AES256_GCM,data:DD3y5xVzkpbbCxHiVOJNwNlCsV0JiRC+TxrB2OEhUwDRzrAEAKg=,iv:0w4UNsbq5MVs58X8lqaPmyJOpnHn6vgjwRvwjrD78Q4=,tag:Ygb+xIs01PcaXZ8qBx2E9g==,type:comment]
+    BACKBLAZE_ENCR_KEY: ENC[AES256_GCM,data:I1nMyBvn8U6nKoOg3P8B5Tv9a+c=,iv:TtZoMCzhzrbW6q0EnGP5bOsGHfdvUL/6kzj3VSrZfvs=,tag:lv7tdczvXnsPYTV+ycI9ow==,type:str]
+    #ENC[AES256_GCM,data:jgO6Ay62x9O2cKGfqHc=,iv:hNw+l4eTdU6/CPRwxr9Uagx5iq4l7gSuKbraTlr8pGM=,tag:DbiWKf2TDmeWsRUXSz8kVA==,type:comment]
+    PODNET: ENC[AES256_GCM,data:wfHci5wDrVLRMobRLQ==,iv:XZOwVXLlYQQEz9TlAI4cy0KR72kwcAY8hrTZLKYn7VM=,tag:oEVOLGBhHjdLUz5W9GSfyQ==,type:str]
+    SVCNET: ENC[AES256_GCM,data:LKcnsCwMNN6LR4hYYw==,iv:WkJvHhRyjU/hDx9TGWfQ9m2jwN4Ul7Z7I+Ijja1gkE0=,tag:5+sCVS2Zsf4nqWYSFgcF7Q==,type:str]
+    CLUSTERNAME: ENC[AES256_GCM,data:p6Ci5g==,iv:vIJI+wciGJdg5wggtmd5mWpgs8MHzCTSLtfMXzIb2wM=,tag:H8tAf65gX9sZdJBHTgQPXA==,type:str]
 sops:
     shamir_threshold: 3
     kms: []
@@ -57,14 +57,14 @@ sops:
         - recipient: age1xerwm86t75dl2v0sqq5xvzag5q6deawx5en7rqy92886049htaxqagw7yt
           enc: |
             -----BEGIN AGE ENCRYPTED FILE-----
-            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBrdk8vTU1SemdJTmpnRnZw
-            Qyt3d1dIRGJkdFgyRlpoYmlLNEhyaU42MjNVCjBtOW80L0RqQUl2RktiSStxMGkz
-            aXRsZThkOW1yOURSZ3cwNUFMUGhLcXcKLS0tIFRWd09uY1FrUkxDTHo3K09zM0l2
-            cHhnZy9YUDYwbWdQb2R1Z0s4N210SVUK+QeiHy5J9X2RNxXbdHTa7Ol/LGv2mbOL
-            xRO+MKRFxK7LPbTi92wD4BZub1+uuJLT8SWk9xjVj7qDwIl18esaZQ==
+            YWdlLWVuY3J5cHRpb24ub3JnL3YxCi0+IFgyNTUxOSBQVnluOFdPdm8wUW9scndV
+            NTNDemdGcUt3bTdGYWNXa1lES1dCQ0NjTWtnCm4vS2lSM2I3ekJ1VDFoUnk0SXEw
+            SnRRWHAxbitTa1o3MUpGVmVoNGh6NUUKLS0tIER2NVlNMnJlWW1pTVdraDVGSGRY
+            WW9JV0l2bUtDWVMwUXZFZXVrb3duMzgKBG7REsdpzRk52dx/dRWeliizTle6rKPz
+            bmQHl8R1LJ4p2dRam7EhqITfHXEJd0+piKOAapmIX7JJzOHoLGy9/A==
             -----END AGE ENCRYPTED FILE-----
-    lastmodified: "2025-01-19T02:33:49Z"
-    mac: ENC[AES256_GCM,data:YOA48uF5ydC6jMNYbOgMLDUezu4LNVI5T/wQidwBiYnIgqJArfYEnKNGMmNpBE71Dq5p4tMg25jYcxwKohoy+yhScccyzABbn6qispVAqmzqyWYh4XCeHxU5Yt68NJ8NEf7RIgQ7SVEuM2n6vW2ROTCIT0gAKD10/kFePhlhp90=,iv:6HddTS19xOFAY1K6yPO3Vy0uJPqA+e/rZ1TDuZ5IXV0=,tag:+7gBcVdx2QHtr60FaucBuw==,type:str]
+    lastmodified: "2025-01-19T02:35:22Z"
+    mac: ENC[AES256_GCM,data:tz2kedwSWbX2QkuHuC2KuPkpCueDgj2p2DhSOf9DNJ+ikFyV0Y+C0pZap898WyG7gPMWH8I3yfGDIwByLM6dWDUaHvAPw0KcIPDi6uLw6LBRdOWBzlp8+RDcJ+6qbRXX3Phr7097P8TodAxhqVKZ2nSBlwMCGVOyyoIO1ZsxvdU=,iv:vfbxiDoe2C0Z2RanEfwfbJ/uv76LrT4TP2dBZgV4s1g=,tag:hiP08m8TnqriWJUl5GjY2w==,type:str]
     pgp: []
     encrypted_regex: ((?i)(displayname|email|pass|ca|id|bootstraptoken|secretboxencryptionsecret|secrets|secrets|password|cert|secret($|[^N])|key|token|^data$|^stringData))
     version: 3.9.2
